# dami

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
LICENSES/: THIRD_PARTY_LICENSES.md
config/: tool_registry.yaml  version_lock.yaml
tests/: conftest.py  (+4 more)
tools/web_lead_agent/: README.md  pyproject.toml
tools/web_lead_agent/config/: allowed_domains.example.yaml  channel_registry.example.yaml  policy_rules.yaml  product_scope.example.yaml
tools/web_lead_agent/fixtures/: synthetic_knowledge.json  synthetic_leads.json
tools/web_lead_agent/fixtures/synthetic_site/: contact.html  external_subresource.html  index.html
tools/web_lead_agent/reports/: 00_route_decision_and_per_file_plan.json  01_implementation_report.md  02_validation_summary.json
tools/web_lead_agent/schemas/: approval_request.schema.json  knowledge_result.schema.json  lead_record.schema.json  message_draft.schema.json  send_action.schema.json  send_receipt.schema.json
tools/web_lead_agent/src/web_lead_agent/: __init__.py  approval.py  cli.py  contracts.py  discovery.py  drafting.py  extract.py  idempotency.py  knowledge.py  normalize.py  policy.py  receipts.py  runtime.py  scoring.py  workflow.py
tools/web_lead_agent/src/web_lead_agent/channels/: __init__.py  base.py  fake_channel.py  website_contact_form.py
tools/web_lead_agent/tests/: conftest.py  test_approval_idempotency_runtime.py  test_config_schema_static.py  test_extract_normalize_scoring.py  test_knowledge_drafting_policy.py  test_security_boundaries.py  test_website_contact_form_adapter.py  test_workflow_e2e.py
(+181 files in other folders)
